objects/Visit__c.object
<CustomObject>
    <description>Created on 01-12-2016 to capture Visit done to a store</description>
    <fields>
        <fullName>Duration__c</fullName>
        <inlineHelpText>Duration in Hours</inlineHelpText>
        <label>Duration</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lat_Position__c</fullName>
        <description>Latitude where the visit was executed</description>
        <label>Lat_Position</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Original_Date__c</fullName>
        <description>Date on which the original visit was supposed to happen</description>
        <label>Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Route_Id__c</fullName>
        <label>Route Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Seller who visited the store</description>
        <label>Seller</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Store which the user visited</description>
        <label>Store</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <description>Date on which visit happened.</description>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <label>Visit</label>
    <nameField>
        <label>Visit Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>